// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationsTab ApplicationsTab renders correctly with data on all app. 1`] = `
<div
  className="page-content-container"
  role="main"
>
  <div>
    <div
      id="resource-list"
    >
      <div
        className="bx--inline-notification bx--inline-notification--success"
        kind="success"
        role="alert"
      >
        <div
          className="bx--inline-notification__details"
        >
          <svg
            alt="closes notification"
            aria-label="closes notification"
            className="bx--inline-notification__icon"
            fillRule="evenodd"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              closes notification
            </title>
            <path
              d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.293-11.332L6.75 9.21 4.707 7.168 3.293 8.582 6.75 12.04l5.957-5.957-1.414-1.414z"
            />
          </svg>
          <div
            className="bx--inline-notification__text-wrapper"
          >
            <p
              className="bx--inline-notification__title"
            >
              Success:
            </p>
            <div
              className="bx--inline-notification__subtitle"
            >
              Delete resource {0} was submitted successfully. The result will display when ready. If you disabled refresh, you need to manually refresh the page to see the changes.
            </div>
          </div>
        </div>
        <button
          className="bx--inline-notification__close-button"
          onClick={[Function]}
          type="button"
        >
          <svg
            alt="close icon"
            aria-label="close icon"
            className="bx--inline-notification__close-icon"
            fillRule="evenodd"
            height="10"
            role="img"
            viewBox="0 0 10 10"
            width="10"
          >
            <title>
              close icon
            </title>
            <path
              d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
            />
          </svg>
        </button>
      </div>
      <div
        className="bx--inline-notification bx--inline-notification--success"
        kind="success"
        role="alert"
      >
        <div
          className="bx--inline-notification__details"
        >
          <svg
            alt="closes notification"
            aria-label="closes notification"
            className="bx--inline-notification__icon"
            fillRule="evenodd"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              closes notification
            </title>
            <path
              d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.293-11.332L6.75 9.21 4.707 7.168 3.293 8.582 6.75 12.04l5.957-5.957-1.414-1.414z"
            />
          </svg>
          <div
            className="bx--inline-notification__text-wrapper"
          >
            <p
              className="bx--inline-notification__title"
            >
              
            </p>
            <div
              className="bx--inline-notification__subtitle"
            >
              Create resource was submitted successfully. The result will display when ready. If you disabled refresh, you need to manually refresh the page to see the changes.
            </div>
          </div>
        </div>
        <button
          className="bx--inline-notification__close-button"
          onClick={[Function]}
          type="button"
        >
          <svg
            alt="close icon"
            aria-label="close icon"
            className="bx--inline-notification__close-icon"
            fillRule="evenodd"
            height="10"
            role="img"
            viewBox="0 0 10 10"
            width="10"
          >
            <title>
              close icon
            </title>
            <path
              d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
            />
          </svg>
        </button>
      </div>
      <div
        className="refresh-time-div"
      >
        <div
          className="refresh-time-container"
        >
          <div
            className="refresh-time-selection"
          >
            <div
              aria-label="Refresh"
              className="button"
              id="refreshButton"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex="0"
              title="Refresh"
            >
              <svg
                className="button-icon"
              >
                <use
                  href="#diagramIcons_autoRefresh"
                />
              </svg>
            </div>
            <div
              aria-label="Choose refresh"
              className="bx--dropdown selection bx--list-box"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="listbox"
              tabIndex="0"
            >
              <div
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="open menu"
                className="bx--list-box__field"
                data-toggle={true}
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
                type="button"
              >
                <span
                  className="bx--list-box__label"
                  htmlFor="refreshDropdown-input"
                >
                  Disable refresh
                </span>
                <div
                  className="bx--list-box__menu-icon"
                >
                  <svg
                    alt="Open menu"
                    aria-label="Open menu"
                    fillRule="evenodd"
                    height="5"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Open menu
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div>
            Last update: {0}
          </div>
        </div>
      </div>
      <div
        className="bx--data-table-v2-container"
        id="undefined-table-container"
      >
        <section
          aria-label="undefined-search"
          className="bx--table-toolbar"
          role="region"
        >
          <div
            className="bx--toolbar-search-container"
          >
            <div
              aria-labelledby="undefined-search-label"
              className="bx--search bx--search--sm bx--search--light"
              role="search"
            >
              <svg
                alt="Filter table"
                aria-label="Filter table"
                className="bx--search-magnifier"
                fillRule="evenodd"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  Filter table
                </title>
                <path
                  d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zm4.936-1.27l4.563 4.557-.707.708-4.563-4.558a6.5 6.5 0 1 1 .707-.707z"
                />
              </svg>
              <label
                className="bx--label"
                htmlFor="undefined-search"
                id="undefined-search-label"
              >
                Filter table
              </label>
              <input
                aria-label="undefined-search"
                className="bx--search-input"
                id="undefined-search"
                onChange={[Function]}
                placeholder="Find resources"
                type="text"
                value="aa"
              />
              <button
                className="bx--search-close"
                onClick={[Function]}
                type="button"
              >
                <svg
                  alt="Provide a description that will be used as the title"
                  aria-label="Provide a description that will be used as the title"
                  fillRule="evenodd"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    Provide a description that will be used as the title
                  </title>
                  <path
                    d="M8 6.586L5.879 4.464 4.464 5.88 6.586 8l-2.122 2.121 1.415 1.415L8 9.414l2.121 2.122 1.415-1.415L9.414 8l2.122-2.121-1.415-1.415L8 6.586zM8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            className="bx--toolbar-content"
          >
            <div
              align="center"
              className="bx--tooltip--definition"
            >
              <button
                aria-describedby="definition-tooltip-3"
                className="bx--tooltip__trigger"
              >
                <a
                  href="undefined/create"
                  onClick={[Function]}
                >
                  <button
                    className="bx--btn bx--btn--sm bx--btn--primary"
                    disabled={true}
                    tabIndex={0}
                    type="button"
                  >
                    Create application
                    <svg
                      alt="Add icon"
                      aria-label="Add icon"
                      className="bx--btn__icon"
                      fillRule="evenodd"
                      height="16"
                      name="add--glyph"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        Add icon
                      </title>
                      <path
                        d="M8 0C3.6 0 0 3.6 0 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8zm4 9H9v3H7V9H4V7h3V4h2v3h3v2z"
                      />
                    </svg>
                  </button>
                </a>
              </button>
              <div
                aria-label="You are not authorized to create applications"
                className="bx--tooltip--definition__top"
                id="definition-tooltip-3"
                role="tooltip"
              >
                <span
                  className="bx--tooltip__caret"
                />
                <p>
                  You are not authorized to create applications
                </p>
              </div>
            </div>
          </div>
        </section>
        <table
          className="bx--data-table-v2 resource-table"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                <button
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending bx--table-sort-v2--active"
                  data-default-key="name"
                  data-key="name"
                  onClick={[Function]}
                  title="Sort rows by this header in descending order"
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Name
                  </span>
                  <svg
                    alt="Sort rows by this header in descending order"
                    aria-label="Sort rows by this header in descending order"
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in descending order
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </button>
              </th>
              <th
                scope="col"
              >
                <button
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="name"
                  data-key="namespace"
                  onClick={[Function]}
                  title="Sort rows by this header in descending order"
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Namespace
                  </span>
                  <svg
                    alt="Sort rows by this header in descending order"
                    aria-label="Sort rows by this header in descending order"
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in descending order
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </button>
              </th>
              <th
                scope="col"
              >
                <button
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="name"
                  data-key="clusters"
                  onClick={[Function]}
                  title="Sort rows by this header in descending order"
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Clusters
                  </span>
                  <svg
                    alt="Sort rows by this header in descending order"
                    aria-label="Sort rows by this header in descending order"
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in descending order
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </button>
              </th>
              <th
                scope="col"
              >
                <button
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="name"
                  data-key="channels"
                  onClick={[Function]}
                  title="Sort rows by this header in descending order"
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Resource
                  </span>
                  <svg
                    alt="Sort rows by this header in descending order"
                    aria-label="Sort rows by this header in descending order"
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in descending order
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </button>
              </th>
              <th
                scope="col"
              >
                <button
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="name"
                  data-key="hubSubscriptions"
                  onClick={[Function]}
                  title="Sort rows by this header in descending order"
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Time window
                  </span>
                  <svg
                    alt="Sort rows by this header in descending order"
                    aria-label="Sort rows by this header in descending order"
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in descending order
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </button>
              </th>
              <th
                scope="col"
              >
                <button
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="name"
                  data-key="created"
                  onClick={[Function]}
                  title="Sort rows by this header in descending order"
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Created
                  </span>
                  <svg
                    alt="Sort rows by this header in descending order"
                    aria-label="Sort rows by this header in descending order"
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in descending order
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </button>
              </th>
              <th
                scope="col"
              />
            </tr>
          </thead>
          <tbody>
            <tr
              data-row-name="mortgage-app"
            >
              <td>
                <a
                  href="undefined/default/mortgage-app"
                  onClick={[Function]}
                >
                  mortgage-app
                </a>
              </td>
              <td>
                default
              </td>
              <td>
                <a
                  href="/multicloud/search?filters={\\"textsearch\\":\\"name%3Amortgage-app%20namespace%3Adefault%20kind%3Aapplication%20apigroup%3Aapp.k8s.io\\"}&showrelated=cluster"
                >
                  {0} Remote
                </a>
              </td>
              <td>
                <div
                  className="label-with-popover-container channel-labels"
                />
              </td>
              <td>
                
              </td>
              <td>
                Feb 18 2020, 11:57 pm
              </td>
              <td>
                <div
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="Overflow-menu"
                  className="bx--overflow-menu"
                  onClose={[Function]}
                  onKeyDown={[Function]}
                  open={false}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    alt="Open and close list of options"
                    aria-label="Open and close list of options"
                    className="bx--overflow-menu__icon"
                    fillRule="evenodd"
                    focusable="false"
                    height="15"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="img"
                    viewBox="0 0 3 15"
                    width="3"
                  >
                    <title>
                      Open and close list of options
                    </title>
                    <path
                      d="M0 1.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 7.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 13.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0"
                    />
                  </svg>
                </div>
              </td>
            </tr>
            <tr
              data-row-name="samplebook-gbapp"
            >
              <td>
                <a
                  href="undefined/sample/samplebook-gbapp"
                  onClick={[Function]}
                >
                  samplebook-gbapp
                </a>
              </td>
              <td>
                sample
              </td>
              <td>
                <a
                  href="/multicloud/search?filters={\\"textsearch\\":\\"name%3Asamplebook-gbapp%20namespace%3Asample%20kind%3Aapplication%20apigroup%3Aapp.k8s.io\\"}&showrelated=cluster"
                >
                  {0} Remote
                </a>
              </td>
              <td>
                <div
                  className="label-with-popover-container channel-labels"
                />
              </td>
              <td>
                
              </td>
              <td>
                Feb 19 2020, 1:43 am
              </td>
              <td>
                <div
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="Overflow-menu"
                  className="bx--overflow-menu"
                  onClose={[Function]}
                  onKeyDown={[Function]}
                  open={false}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    alt="Open and close list of options"
                    aria-label="Open and close list of options"
                    className="bx--overflow-menu__icon"
                    fillRule="evenodd"
                    focusable="false"
                    height="15"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="img"
                    viewBox="0 0 3 15"
                    width="3"
                  >
                    <title>
                      Open and close list of options
                    </title>
                    <path
                      d="M0 1.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 7.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 13.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0"
                    />
                  </svg>
                </div>
              </td>
            </tr>
            <tr
              data-row-name="subscribed-guestbook-application"
            >
              <td>
                <a
                  href="undefined/kube-system/subscribed-guestbook-application"
                  onClick={[Function]}
                >
                  subscribed-guestbook-application
                </a>
              </td>
              <td>
                kube-system
              </td>
              <td>
                <a
                  href="/multicloud/search?filters={\\"textsearch\\":\\"name%3Asubscribed-guestbook-application%20namespace%3Akube-system%20kind%3Aapplication%20apigroup%3Aapp.k8s.io\\"}&showrelated=cluster"
                >
                  {0} Remote
                </a>
              </td>
              <td>
                <div
                  className="label-with-popover-container channel-labels"
                />
              </td>
              <td>
                
              </td>
              <td>
                Feb 11 2020, 11:26 pm
              </td>
              <td>
                <div
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="Overflow-menu"
                  className="bx--overflow-menu"
                  onClose={[Function]}
                  onKeyDown={[Function]}
                  open={false}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    alt="Open and close list of options"
                    aria-label="Open and close list of options"
                    className="bx--overflow-menu__icon"
                    fillRule="evenodd"
                    focusable="false"
                    height="15"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="img"
                    viewBox="0 0 3 15"
                    width="3"
                  >
                    <title>
                      Open and close list of options
                    </title>
                    <path
                      d="M0 1.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 7.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 13.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0"
                    />
                  </svg>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="bx--pagination"
        disabled={true}
      >
        <div
          className="bx--pagination__left"
        >
          <span
            className="bx--pagination__text"
          >
            items per page
          </span>
          <div
            className="bx--form-item"
          >
            <div
              className="bx--select bx--select--inline"
            >
              <label
                className="bx--label bx--visually-hidden"
                htmlFor="bx-pagination-select-resource-table-pagination"
              >
                items per page
              </label>
              <select
                className="bx--select-input"
                id="bx-pagination-select-resource-table-pagination"
                onChange={[Function]}
                value={20}
              >
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={5}
                >
                  5
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={10}
                >
                  10
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={20}
                >
                  20
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={50}
                >
                  50
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={75}
                >
                  75
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={100}
                >
                  100
                </option>
              </select>
              <svg
                alt="open list of options"
                aria-label="open list of options"
                className="bx--select__arrow"
                fillRule="evenodd"
                height="5"
                role="img"
                viewBox="0 0 10 5"
                width="10"
              >
                <title>
                  open list of options
                </title>
                <path
                  d="M0 0l5 4.998L10 0z"
                />
              </svg>
            </div>
          </div>
          <span
            className="bx--pagination__text"
          >
             |  
            {0}-{1} of {0} items
          </span>
        </div>
        <div
          className="bx--pagination__right bx--pagination--inline"
        >
          <span
            className="bx--pagination__text"
          >
            {0} of {1} pages
          </span>
          <button
            aria-label="Backward"
            className="bx--pagination__button bx--pagination__button--backward bx--pagination__button--no-index"
            disabled={true}
            onClick={[Function]}
          >
            <svg
              alt="Backward"
              aria-label="Backward"
              className="bx--pagination__button-icon"
              fillRule="evenodd"
              height="12"
              role="img"
              viewBox="0 0 7 12"
              width="7"
            >
              <title>
                Backward
              </title>
              <path
                d="M1.45 6.002L7 11.27l-.685.726L0 6.003 6.315 0 7 .726z"
              />
            </svg>
          </button>
          <button
            aria-label="Forward"
            className="bx--pagination__button bx--pagination__button--forward"
            disabled={true}
            onClick={[Function]}
          >
            <svg
              alt="Forward"
              aria-label="Forward"
              className="bx--pagination__button-icon"
              fillRule="evenodd"
              height="12"
              role="img"
              viewBox="0 0 7 12"
              width="7"
            >
              <title>
                Forward
              </title>
              <path
                d="M5.569 5.994L0 .726.687 0l6.336 5.994-6.335 6.002L0 11.27z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ApplicationsTab ApplicationsTab renders correctly with data on single app. 1`] = `
<div
  className="page-content-container"
  role="main"
>
  <div>
    <div
      id="resource-list"
    >
      <div
        className="bx--inline-notification bx--inline-notification--success"
        kind="success"
        role="alert"
      >
        <div
          className="bx--inline-notification__details"
        >
          <svg
            alt="closes notification"
            aria-label="closes notification"
            className="bx--inline-notification__icon"
            fillRule="evenodd"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              closes notification
            </title>
            <path
              d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.293-11.332L6.75 9.21 4.707 7.168 3.293 8.582 6.75 12.04l5.957-5.957-1.414-1.414z"
            />
          </svg>
          <div
            className="bx--inline-notification__text-wrapper"
          >
            <p
              className="bx--inline-notification__title"
            >
              Success:
            </p>
            <div
              className="bx--inline-notification__subtitle"
            >
              Delete resource {0} was submitted successfully. The result will display when ready. If you disabled refresh, you need to manually refresh the page to see the changes.
            </div>
          </div>
        </div>
        <button
          className="bx--inline-notification__close-button"
          onClick={[Function]}
          type="button"
        >
          <svg
            alt="close icon"
            aria-label="close icon"
            className="bx--inline-notification__close-icon"
            fillRule="evenodd"
            height="10"
            role="img"
            viewBox="0 0 10 10"
            width="10"
          >
            <title>
              close icon
            </title>
            <path
              d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
            />
          </svg>
        </button>
      </div>
      <div
        className="bx--inline-notification bx--inline-notification--success"
        kind="success"
        role="alert"
      >
        <div
          className="bx--inline-notification__details"
        >
          <svg
            alt="closes notification"
            aria-label="closes notification"
            className="bx--inline-notification__icon"
            fillRule="evenodd"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              closes notification
            </title>
            <path
              d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm3.293-11.332L6.75 9.21 4.707 7.168 3.293 8.582 6.75 12.04l5.957-5.957-1.414-1.414z"
            />
          </svg>
          <div
            className="bx--inline-notification__text-wrapper"
          >
            <p
              className="bx--inline-notification__title"
            >
              
            </p>
            <div
              className="bx--inline-notification__subtitle"
            >
              Create resource was submitted successfully. The result will display when ready. If you disabled refresh, you need to manually refresh the page to see the changes.
            </div>
          </div>
        </div>
        <button
          className="bx--inline-notification__close-button"
          onClick={[Function]}
          type="button"
        >
          <svg
            alt="close icon"
            aria-label="close icon"
            className="bx--inline-notification__close-icon"
            fillRule="evenodd"
            height="10"
            role="img"
            viewBox="0 0 10 10"
            width="10"
          >
            <title>
              close icon
            </title>
            <path
              d="M6.32 5L10 8.68 8.68 10 5 6.32 1.32 10 0 8.68 3.68 5 0 1.32 1.32 0 5 3.68 8.68 0 10 1.32 6.32 5z"
            />
          </svg>
        </button>
      </div>
      <div
        className="refresh-time-div"
      >
        <div
          className="refresh-time-container"
        >
          <div
            className="refresh-time-selection"
          >
            <div
              aria-label="Refresh"
              className="button"
              id="refreshButton"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex="0"
              title="Refresh"
            >
              <svg
                className="button-icon"
              >
                <use
                  href="#diagramIcons_autoRefresh"
                />
              </svg>
            </div>
            <div
              aria-label="Choose refresh"
              className="bx--dropdown selection bx--list-box"
              onClick={[Function]}
              onKeyDown={[Function]}
              role="listbox"
              tabIndex="0"
            >
              <div
                aria-expanded={false}
                aria-haspopup={true}
                aria-label="open menu"
                className="bx--list-box__field"
                data-toggle={true}
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
                type="button"
              >
                <span
                  className="bx--list-box__label"
                  htmlFor="refreshDropdown-input"
                >
                  Disable refresh
                </span>
                <div
                  className="bx--list-box__menu-icon"
                >
                  <svg
                    alt="Open menu"
                    aria-label="Open menu"
                    fillRule="evenodd"
                    height="5"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Open menu
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div>
            Last update: {0}
          </div>
        </div>
      </div>
      <div
        className="bx--data-table-v2-container"
        id="undefined-table-container"
      >
        <section
          aria-label="undefined-search"
          className="bx--table-toolbar"
          role="region"
        >
          <div
            className="bx--toolbar-search-container"
          >
            <div
              aria-labelledby="undefined-search-label"
              className="bx--search bx--search--sm bx--search--light"
              role="search"
            >
              <svg
                alt="Filter table"
                aria-label="Filter table"
                className="bx--search-magnifier"
                fillRule="evenodd"
                height="16"
                role="img"
                viewBox="0 0 16 16"
                width="16"
              >
                <title>
                  Filter table
                </title>
                <path
                  d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zm4.936-1.27l4.563 4.557-.707.708-4.563-4.558a6.5 6.5 0 1 1 .707-.707z"
                />
              </svg>
              <label
                className="bx--label"
                htmlFor="undefined-search"
                id="undefined-search-label"
              >
                Filter table
              </label>
              <input
                aria-label="undefined-search"
                className="bx--search-input"
                id="undefined-search"
                onChange={[Function]}
                placeholder="Find resources"
                type="text"
                value="aa"
              />
              <button
                className="bx--search-close"
                onClick={[Function]}
                type="button"
              >
                <svg
                  alt="Provide a description that will be used as the title"
                  aria-label="Provide a description that will be used as the title"
                  fillRule="evenodd"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    Provide a description that will be used as the title
                  </title>
                  <path
                    d="M8 6.586L5.879 4.464 4.464 5.88 6.586 8l-2.122 2.121 1.415 1.415L8 9.414l2.121 2.122 1.415-1.415L9.414 8l2.122-2.121-1.415-1.415L8 6.586zM8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            className="bx--toolbar-content"
          >
            <div
              align="center"
              className="bx--tooltip--definition"
            >
              <button
                aria-describedby="definition-tooltip-2"
                className="bx--tooltip__trigger"
              >
                <a
                  href="undefined/create"
                  onClick={[Function]}
                >
                  <button
                    className="bx--btn bx--btn--sm bx--btn--primary"
                    disabled={true}
                    tabIndex={0}
                    type="button"
                  >
                    Create application
                    <svg
                      alt="Add icon"
                      aria-label="Add icon"
                      className="bx--btn__icon"
                      fillRule="evenodd"
                      height="16"
                      name="add--glyph"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        Add icon
                      </title>
                      <path
                        d="M8 0C3.6 0 0 3.6 0 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8zm4 9H9v3H7V9H4V7h3V4h2v3h3v2z"
                      />
                    </svg>
                  </button>
                </a>
              </button>
              <div
                aria-label="You are not authorized to create applications"
                className="bx--tooltip--definition__top"
                id="definition-tooltip-2"
                role="tooltip"
              >
                <span
                  className="bx--tooltip__caret"
                />
                <p>
                  You are not authorized to create applications
                </p>
              </div>
            </div>
          </div>
        </section>
        <table
          className="bx--data-table-v2 resource-table"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                <button
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending bx--table-sort-v2--active"
                  data-default-key="name"
                  data-key="name"
                  onClick={[Function]}
                  title="Sort rows by this header in descending order"
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Name
                  </span>
                  <svg
                    alt="Sort rows by this header in descending order"
                    aria-label="Sort rows by this header in descending order"
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in descending order
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </button>
              </th>
              <th
                scope="col"
              >
                <button
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="name"
                  data-key="namespace"
                  onClick={[Function]}
                  title="Sort rows by this header in descending order"
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Namespace
                  </span>
                  <svg
                    alt="Sort rows by this header in descending order"
                    aria-label="Sort rows by this header in descending order"
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in descending order
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </button>
              </th>
              <th
                scope="col"
              >
                <button
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="name"
                  data-key="clusters"
                  onClick={[Function]}
                  title="Sort rows by this header in descending order"
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Clusters
                  </span>
                  <svg
                    alt="Sort rows by this header in descending order"
                    aria-label="Sort rows by this header in descending order"
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in descending order
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </button>
              </th>
              <th
                scope="col"
              >
                <button
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="name"
                  data-key="channels"
                  onClick={[Function]}
                  title="Sort rows by this header in descending order"
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Resource
                  </span>
                  <svg
                    alt="Sort rows by this header in descending order"
                    aria-label="Sort rows by this header in descending order"
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in descending order
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </button>
              </th>
              <th
                scope="col"
              >
                <button
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="name"
                  data-key="hubSubscriptions"
                  onClick={[Function]}
                  title="Sort rows by this header in descending order"
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Time window
                  </span>
                  <svg
                    alt="Sort rows by this header in descending order"
                    aria-label="Sort rows by this header in descending order"
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in descending order
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </button>
              </th>
              <th
                scope="col"
              >
                <button
                  className="bx--table-sort-v2 bx--table-sort-v2--ascending"
                  data-default-key="name"
                  data-key="created"
                  onClick={[Function]}
                  title="Sort rows by this header in descending order"
                >
                  <span
                    className="bx--table-header-label"
                  >
                    Created
                  </span>
                  <svg
                    alt="Sort rows by this header in descending order"
                    aria-label="Sort rows by this header in descending order"
                    className="bx--table-sort-v2__icon"
                    fillRule="evenodd"
                    height="5"
                    name="caret--down"
                    role="img"
                    viewBox="0 0 10 5"
                    width="10"
                  >
                    <title>
                      Sort rows by this header in descending order
                    </title>
                    <path
                      d="M0 0l5 4.998L10 0z"
                    />
                  </svg>
                </button>
              </th>
              <th
                scope="col"
              />
            </tr>
          </thead>
          <tbody>
            <tr
              data-row-name="mortgage-app"
            >
              <td>
                <a
                  href="undefined/default/mortgage-app"
                  onClick={[Function]}
                >
                  mortgage-app
                </a>
              </td>
              <td>
                default
              </td>
              <td>
                <a
                  href="/multicloud/search?filters={\\"textsearch\\":\\"name%3Amortgage-app%20namespace%3Adefault%20kind%3Aapplication%20apigroup%3Aapp.k8s.io\\"}&showrelated=cluster"
                >
                  {0} Remote
                </a>
              </td>
              <td>
                <div
                  className="label-with-popover-container channel-labels"
                />
              </td>
              <td>
                
              </td>
              <td>
                Feb 18 2020, 11:57 pm
              </td>
              <td>
                <div
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="Overflow-menu"
                  className="bx--overflow-menu"
                  onClose={[Function]}
                  onKeyDown={[Function]}
                  open={false}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    alt="Open and close list of options"
                    aria-label="Open and close list of options"
                    className="bx--overflow-menu__icon"
                    fillRule="evenodd"
                    focusable="false"
                    height="15"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="img"
                    viewBox="0 0 3 15"
                    width="3"
                  >
                    <title>
                      Open and close list of options
                    </title>
                    <path
                      d="M0 1.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 7.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 13.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0"
                    />
                  </svg>
                </div>
              </td>
            </tr>
            <tr
              data-row-name="samplebook-gbapp"
            >
              <td>
                <a
                  href="undefined/sample/samplebook-gbapp"
                  onClick={[Function]}
                >
                  samplebook-gbapp
                </a>
              </td>
              <td>
                sample
              </td>
              <td>
                <a
                  href="/multicloud/search?filters={\\"textsearch\\":\\"name%3Asamplebook-gbapp%20namespace%3Asample%20kind%3Aapplication%20apigroup%3Aapp.k8s.io\\"}&showrelated=cluster"
                >
                  {0} Remote
                </a>
              </td>
              <td>
                <div
                  className="label-with-popover-container channel-labels"
                />
              </td>
              <td>
                
              </td>
              <td>
                Feb 19 2020, 1:43 am
              </td>
              <td>
                <div
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="Overflow-menu"
                  className="bx--overflow-menu"
                  onClose={[Function]}
                  onKeyDown={[Function]}
                  open={false}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    alt="Open and close list of options"
                    aria-label="Open and close list of options"
                    className="bx--overflow-menu__icon"
                    fillRule="evenodd"
                    focusable="false"
                    height="15"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="img"
                    viewBox="0 0 3 15"
                    width="3"
                  >
                    <title>
                      Open and close list of options
                    </title>
                    <path
                      d="M0 1.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 7.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 13.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0"
                    />
                  </svg>
                </div>
              </td>
            </tr>
            <tr
              data-row-name="subscribed-guestbook-application"
            >
              <td>
                <a
                  href="undefined/kube-system/subscribed-guestbook-application"
                  onClick={[Function]}
                >
                  subscribed-guestbook-application
                </a>
              </td>
              <td>
                kube-system
              </td>
              <td>
                <a
                  href="/multicloud/search?filters={\\"textsearch\\":\\"name%3Asubscribed-guestbook-application%20namespace%3Akube-system%20kind%3Aapplication%20apigroup%3Aapp.k8s.io\\"}&showrelated=cluster"
                >
                  {0} Remote
                </a>
              </td>
              <td>
                <div
                  className="label-with-popover-container channel-labels"
                />
              </td>
              <td>
                
              </td>
              <td>
                Feb 11 2020, 11:26 pm
              </td>
              <td>
                <div
                  aria-expanded={false}
                  aria-haspopup={true}
                  aria-label="Overflow-menu"
                  className="bx--overflow-menu"
                  onClose={[Function]}
                  onKeyDown={[Function]}
                  open={false}
                  role="button"
                  tabIndex={0}
                >
                  <svg
                    alt="Open and close list of options"
                    aria-label="Open and close list of options"
                    className="bx--overflow-menu__icon"
                    fillRule="evenodd"
                    focusable="false"
                    height="15"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="img"
                    viewBox="0 0 3 15"
                    width="3"
                  >
                    <title>
                      Open and close list of options
                    </title>
                    <path
                      d="M0 1.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 7.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0M0 13.5a1.5 1.5 0 1 1 3 0 1.5 1.5 0 1 1-3 0"
                    />
                  </svg>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        className="bx--pagination"
        disabled={true}
      >
        <div
          className="bx--pagination__left"
        >
          <span
            className="bx--pagination__text"
          >
            items per page
          </span>
          <div
            className="bx--form-item"
          >
            <div
              className="bx--select bx--select--inline"
            >
              <label
                className="bx--label bx--visually-hidden"
                htmlFor="bx-pagination-select-resource-table-pagination"
              >
                items per page
              </label>
              <select
                className="bx--select-input"
                id="bx-pagination-select-resource-table-pagination"
                onChange={[Function]}
                value={20}
              >
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={5}
                >
                  5
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={10}
                >
                  10
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={20}
                >
                  20
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={50}
                >
                  50
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={75}
                >
                  75
                </option>
                <option
                  className="bx--select-option"
                  disabled={false}
                  hidden={false}
                  value={100}
                >
                  100
                </option>
              </select>
              <svg
                alt="open list of options"
                aria-label="open list of options"
                className="bx--select__arrow"
                fillRule="evenodd"
                height="5"
                role="img"
                viewBox="0 0 10 5"
                width="10"
              >
                <title>
                  open list of options
                </title>
                <path
                  d="M0 0l5 4.998L10 0z"
                />
              </svg>
            </div>
          </div>
          <span
            className="bx--pagination__text"
          >
             |  
            {0}-{1} of {0} items
          </span>
        </div>
        <div
          className="bx--pagination__right bx--pagination--inline"
        >
          <span
            className="bx--pagination__text"
          >
            {0} of {1} pages
          </span>
          <button
            aria-label="Backward"
            className="bx--pagination__button bx--pagination__button--backward bx--pagination__button--no-index"
            disabled={true}
            onClick={[Function]}
          >
            <svg
              alt="Backward"
              aria-label="Backward"
              className="bx--pagination__button-icon"
              fillRule="evenodd"
              height="12"
              role="img"
              viewBox="0 0 7 12"
              width="7"
            >
              <title>
                Backward
              </title>
              <path
                d="M1.45 6.002L7 11.27l-.685.726L0 6.003 6.315 0 7 .726z"
              />
            </svg>
          </button>
          <button
            aria-label="Forward"
            className="bx--pagination__button bx--pagination__button--forward"
            disabled={true}
            onClick={[Function]}
          >
            <svg
              alt="Forward"
              aria-label="Forward"
              className="bx--pagination__button-icon"
              fillRule="evenodd"
              height="12"
              role="img"
              viewBox="0 0 7 12"
              width="7"
            >
              <title>
                Forward
              </title>
              <path
                d="M5.569 5.994L0 .726.687 0l6.336 5.994-6.335 6.002L0 11.27z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
